--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "简单获取bing桌面壁纸存如七牛oss",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "set NODE_ENV=dev && nodemon app.js",
+    "run": "set NODE_ENV=production && node app.js",
     "lint ": "eslint --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mysql": "^2.17.1",
     "portfinder": "^1.0.25",
     "qiniu": "^7.2.2",
     "request": "^2.88.0"
