--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "peiili",
   "license": "ISC",
   "dependencies": {
+    "blurhash":"2.0.4",
+    "canvas": "^2.10.2",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
     "portfinder": "^1.0.25",
