--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "set NODE_ENV=dev&&nodemon app.js",
-    "pro": "set NODE_ENV=production&&node app.js",
+    "pro": "export NODE_ENV=production&&pm2 start app.js --name bing",
     "lint ": "eslint --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
