--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
   "author": "peiili",
   "license": "ISC",
   "dependencies": {
-    "blurhash":"2.0.4",
+    "blurhash": "2.0.4",
     "canvas": "^2.10.2",
-    "express": "^4.17.1",
+    "cheerio": "^1.0.0-rc.12",
     "mysql": "^2.17.1",
-    "portfinder": "^1.0.25",
     "qiniu": "^7.2.2",
     "request": "^2.88.0"
   },
